@@ -1,6 +1,6 @@
 #!/bin/sh
 # Translate the assembler syntax of i386 assembler programs
-# Usage: asmsyntax < gas-asm-file > all-asm-file
+# Usage: asmsyntax [-no-C] < gas-asm-file > all-asm-file
 # Warning! All comments are stripped.
 
 sed -e '# ----------- Strip comments' \
@@ -15,8 +15,12 @@ sed -e '# ----------- Remove #APP/#NO_APP lines, add a blank line at the end' \
 | \
 (cat - ; echo) \
 | \
+(if [ $# = 1 -a "x$1" = "x-no-C" ] ; then \
+  cat - \
+; else \
 sed -e '# ----------- Global symbols depends on ASM_UNDERSCORE' \
     -e 's/_\([A-Za-z0-9_:]*\)/C(\1)/' \
+; fi) \
 | \
 sed -e '# ----------- Introduce macro syntax for operands' \
     -e 's/\([-+0-9A-Z_]\+\)[(]%\(e..\)[)]/MEM_DISP(\2,\1)/g' \
@@ -82,7 +86,11 @@ sed -e '# ----------- Introduce macro syntax for assembler pseudo-ops' \
     -e '/' \
     -e '}' \
 | \
+(if [ $# = 1 -a "x$1" = "x-no-C" ] ; then \
+  cat - \
+; else \
 sed -e '# ----------- Declare global symbols as functions (we have no variables)' \
     -e 's/GLOBL(C(\([A-Za-z0-9_]*\)))$/GLOBL(C(\1))\' \
-    -e '	DECLARE_FUNCTION(\1)/'
+    -e '	DECLARE_FUNCTION(\1)/' \
+; fi)
 
